# Aslan-Carla

./: .gitmodules  README.md
aslan-carla-ade/: .aderc  Dockerfile  README.md  entrypoint  env.sh  install-deps.sh
src/carla_aslan_mapper/: CMakeLists.txt  package.xml
src/carla_aslan_mapper/config/: objects.json
src/carla_aslan_mapper/launch/: carla_aslan_ad_agent.launch  carla_aslan_spawn_vehicle.launch  carla_ros_custom_vehicle.launch
src/carla_aslan_mapper/model/urdf/: sd_env200 (copy).urdf.xacro  sd_env200.urdf.xacro
src/carla_aslan_mapper/model/urdf/sensors/: ZED2.urdf.xacro
src/carla_aslan_mapper/msg/: AckermannDrive.msg
src/carla_aslan_mapper/paths/: waypoints.csv
src/carla_aslan_mapper/rviz/: aslan.rviz  carla_ros_rviz.rviz
src/carla_aslan_mapper/scenarios/: Overtake.xosc
src/carla_aslan_mapper/src/: Carla_Aslan_Mapping.py
src/resources/: How to Run Carla Ros Bridge.txt  How to run Carla UE Editor.txt  run_aslan_ros_carla.sh
