<?xml version="1.0"?>
<package format="2">
  <name>carla_aslan_mapper</name>
  <version>1.0.0</version>
  <description>The carla_aslan_mapper package</description>

  <maintainer email="sander.vandijk@streetdrone.com">Sander G. van Dijk</maintainer>

  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rviz_plugin_tutorials</exec_depend>
</package>
